envoy/envoy.yaml
static_resources:
  listeners:
    - name: ingress
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: app
                      domains: [ "*" ]
                      routes:
                        - match: { prefix: "/public/" }
                          route:
                            cluster: backend
                            prefix_rewrite: "/anything/"

                        - match: { prefix: "/people/" }
                          route:
                            cluster: backend
                            prefix_rewrite: "/anything/people/"

                        - match: { prefix: "/" }
                          route: { cluster: backend }
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      failure_mode_allow: false
                      with_request_body:
                        max_request_bytes: 8192
                        allow_partial_message: true
                      grpc_service:
                        envoy_grpc:
                          cluster_name: opa_authz
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend
      type: STRICT_DNS
      connect_timeout: 0.25s
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: backend, port_value: 80 }

    - name: opa_authz
      type: STRICT_DNS
      connect_timeout: 0.25s
      http2_protocol_options: {}   # gRPC
      load_assignment:
        cluster_name: opa_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: opa, port_value: 9191 }

admin:
  access_log_path: /tmp/admin.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
